--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,29 @@
+
 .App {
   text-align: center;
+  width:100vw;
+  box-sizing: border-box;
+  position:relative;
+  display:flex;
+  flex-direction: column;
+  /* background-color: green; */
+}
+@media (max-width: 768px) {
+  .App{
+    width:100vw;
+    right:0;
+    left:0;
+    display:flex;
+    flex-direction: column;
+    /* background-color: red; */
+  }    
+
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -21,7 +39,10 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: blue;
+
+
+ 
 }
 
 .App-link {
